--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.jrnd</groupId>
-    <version>0.0.3</version>
+    <version>0.0.4</version>
     <artifactId>jr-kafka-connect-source</artifactId>
     <packaging>jar</packaging>
 
@@ -16,7 +16,7 @@
         <avro.version>1.11.3</avro.version>
         <slf4j.version>1.7.15</slf4j.version>
         <junit.version>5.8.2</junit.version>
-        <mockito.version>4.4.0</mockito.version>
+        <mockito.version>5.0.0</mockito.version>
         <curator.version>5.0.0</curator.version>
     </properties>
 
@@ -59,6 +59,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
