--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.jrnd</groupId>
-    <version>0.0.5</version>
+    <version>0.0.6</version>
     <artifactId>jr-kafka-connect-source</artifactId>
     <packaging>jar</packaging>
 
@@ -14,6 +14,7 @@
         <maven.assembly.plugin>3.3.0</maven.assembly.plugin>
         <kafka.version>3.8.0</kafka.version>
         <avro.version>1.11.3</avro.version>
+        <jackson.version>2.13.0</jackson.version>
         <slf4j.version>1.7.15</slf4j.version>
         <junit.version>5.8.2</junit.version>
         <mockito.version>5.0.0</mockito.version>
@@ -40,6 +41,13 @@
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
             <version>${avro.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
             <scope>provided</scope>
         </dependency>
 
