--- a/src/assembly/manifest.json
+++ b/src/assembly/manifest.json
@@ -1,14 +1,14 @@
 {
   "name" : "jr-source-connector",
-  "version" : "0.0.5",
+  "version" : "0.0.6",
   "title" : "JR Source Connector",
   "description" : "A Kafka Connector for JR, the leading streaming quality data generator.",
   "owner" : {
     "username" : "jrnd.io",
     "type" : "organization",
     "name" : "jrnd.io",
-    "url" : "",
-    "logo" : "assets/test.png"
+    "url" : "https://jrnd.io",
+    "logo" : "assets/jr.png"
   },
   "support" : {
     "summary" : "https://github.com/jrnd-io/jr-kafka-connect-source",
@@ -30,5 +30,5 @@
     "url" : "https://github.com/jrnd-io/jr?tab=MIT-1-ov-file#readme"
   } ],
   "component_types" : [ "source" ],
-  "release_date" : "2024-09-05"
+  "release_date" : "2024-09-09"
 }
