--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.jrnd</groupId>
-    <version>0.0.7</version>
+    <version>0.0.8</version>
     <artifactId>jr-kafka-connect-source</artifactId>
     <packaging>jar</packaging>
 
@@ -15,6 +15,7 @@
         <kafka.version>3.8.0</kafka.version>
         <avro.version>1.11.3</avro.version>
         <jackson.version>2.13.0</jackson.version>
+        <protobuf.version>3.19.1</protobuf.version>
         <slf4j.version>1.7.15</slf4j.version>
         <junit.version>5.8.2</junit.version>
         <mockito.version>5.0.0</mockito.version>
@@ -48,6 +49,13 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>${protobuf.version}</version>
             <scope>provided</scope>
         </dependency>
 
