--- a/quickstart/docker-compose.yml
+++ b/quickstart/docker-compose.yml
@@ -66,6 +66,8 @@ services:
 
   control-center:
     image: confluentinc/cp-enterprise-control-center:7.7.1
+    hostname: control-center
+    container_name: control-center
     depends_on:
       - broker
       - schema-registry
