--- a/quickstart/docker-compose.yml
+++ b/quickstart/docker-compose.yml
@@ -46,6 +46,7 @@ services:
       - "8083:8083"
     volumes:
       - ./config/customer-template.json:/tmp/customer-template.json
+      - ./config/key-customer-template.json:/tmp/key-customer-template.json
     environment:
       CONNECT_BOOTSTRAP_SERVERS: 'broker:9092'
       CONNECT_REST_ADVERTISED_HOST_NAME: connect
