--- a/quickstart/docker-compose.yml
+++ b/quickstart/docker-compose.yml
@@ -84,3 +84,12 @@ services:
       CONTROL_CENTER_STREAMS_NUM_STREAM_THREADS: 1
       CONTROL_CENTER_CONSUMER_FETCH_MAX_BYTES: 52428800
       CONTROL_CENTER_CONSUMER_MAX_POLL_RECORDS: 500
+
+  web:
+    image: nginx:alpine
+    hostname: web
+    container_name: web
+    ports:
+      - "8080:80"
+    volumes:
+      - ./config/html:/usr/share/nginx/html:ro
